feat: refactoring API contracts to portuguese language
