# src/main/kotlin/com/heitor/finance/infrastructure/controller/BalanceController.kt
@@ -8,16 +8,16 @@ import org.springframework.web.bind.annotation.*
 import java.time.LocalDate
 
 @RestController
-@RequestMapping("/v1/balance")
+@RequestMapping("/v1/balanco")
 class BalanceController(
     private val findBalanceUseCase: FindBalanceUseCase
 ) {
 
     @GetMapping
     fun findBalance(
-        @RequestParam @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) startDate: LocalDate,
-        @RequestParam @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) endDate: LocalDate,
-        @RequestParam(required = false) categoryId: Long?
+        @RequestParam("data_inicio") @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) startDate: LocalDate,
+        @RequestParam("data_fim") @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) endDate: LocalDate,
+        @RequestParam("id_categoria", required = false) categoryId: Long?
     ): ResponseEntity<BalanceResponse> =
         ResponseEntity.ok(findBalanceUseCase.findByPeriodAndCategory(startDate, endDate, categoryId))
 }
